# synhash

./: .gitignore  CMakeLists.txt  Makefile  README.md  c.yaml  java.yaml  python.yaml  syntax_highlighter  yaml-parser.c
src/: highlight.c
